# Trace

./: .gitignore  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ai/: providers.ts
src/blocks/: arduino.ts  arduinoModel.test.ts  arduinoModel.ts  arduinoWorkspace.test.ts
src/components/: AiAssistant.tsx  AiSettingsModal.tsx  AppErrorBoundary.tsx  BlockEditor.tsx  BoardOptionsModal.tsx  BoardPickerModal.tsx  BuildOutput.tsx  PackageInstallBar.tsx  SerialConsole.tsx  StartupSplash.tsx  TraceMark.tsx
src/lib/: settings.ts
