[package]
name = "trace"
version = "0.1.0"
description = "A modern ESP32 and Arduino desktop IDE"
authors = ["Trace contributors"]
edition = "2021"

[lib]
name = "trace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
